methods.picture.PictureMono2.scala.code
override def run() {
  var partie=0
  var a=0
  for (partie<-0 to 8){
    faireMotif()
    for (a<-0 to 8){
      avance()
    }
  }
}

def faireV(){
  baisseBrosse()
  leveBrosse()
  
  gauche()
  avance()
  droite()
  avance()
  
  baisseBrosse()
  leveBrosse()
  
  avance()
  droite()
  avance()
  gauche()
  
  baisseBrosse()
  leveBrosse()
}

def faireMotif(){
  var cote=0
  for(cote<-0 to 3){
    avance()
    avance()
    faireV()
    avance()
    avance()
    gauche()
}